--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.16",
+    "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.16",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
+    "bootstrap": "^4.4.1",
+    "node-sass": "^4.13.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "^3.7.3"
   },
